chore: Ajuste do código fonte para o padrão Rails
